# Unified_Sentinel_PWA_Demo

./: .gitignore  README.md  return_replace.html
unified-sentinel-backend/: CMakeLists.txt  main.cpp
unified-sentinel-demo/: README.md  package-lock.json  package.json
unified-sentinel-demo/src/: App.css  App.js
